Case titles class added to html element and img spacing fixed
the titles on cases now have styling not done yet. Spacing between img rep is not alloweded fixed with %20

--- a/styles/style.css
+++ b/styles/style.css
@@ -366,15 +366,22 @@ strong {
 
 .cases-title {
     color: #F6F6F4;
-    font-size: 2.5em;
+    font-size: 2em;
     font-family: var(--bold-text);
     margin: var(--title-spacing);
+}
+
+.case-subtitle {
+    color: #F6F6F4;
+    font-family: var(--medium-text);
 }
 
 .case-img {
     height: 200px;
     border-radius: 0.5em;
 }
+
+
 
 /* #region entrance animation */
 .entrance {
